<resources>
    <string name="app_name">AndroidTask</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="next">Next</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_pass">Forget password?</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_title">sign in to access your account</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="create_acc">by creating a free account.</string>
    <string name="full_name">Full name</string>
    <string name="valid_email">Valid email</string>
    <string name="phone_number">Phone number</string>
    <string name="accept_terms">By checking the box you agree to our <font color="#6C63FF">Terms</font> and <font color="#6C63FF">Conditions.</font></string>
    <string name="already_member">Already a member?</string>
    <string name="log_in">Log In</string>
    <string name="strong_pass">Strong Password</string>
    <string name="search">Search here</string>
    <string name="welcome_home">Welcome to FoodStore!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>