<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.22" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/title_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="@color/black_25"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_light"
            android:gravity="center"
            android:text="@string/create_acc"
            android:textColor="@color/black_25"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"

            android:text="@string/already_member"
            android:textColor="@color/black_25"
            app:layout_constraintBottom_toBottomOf="@id/buttonLogin"
            app:layout_constraintEnd_toStartOf="@+id/buttonLogin"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonLogin" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginVertical="24dp"
            android:minWidth="0dp"
            android:text="@string/log_in"
            android:textColor="@color/primary_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@id/materialButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingVertical="14dp"
            android:text="@string/next"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            app:backgroundTint="@color/primary_pink"
            app:cornerRadius="12dp"
            app:icon="@drawable/arrow_right_icon"
            app:iconGravity="textEnd"
            app:iconSize="10dp"
            app:layout_constraintTop_toBottomOf="@id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/black_50"
            app:boxBackgroundColor="@color/white_C4"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/primary_pink"
            app:boxStrokeWidth="0dp"
            app:layout_constraintBottom_toTopOf="@id/tlValidEmail"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/user_icon"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlValidEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="@color/primary_pink"
            app:boxBackgroundColor="@color/white_C4"
            app:boxStrokeWidth="0dp"
            app:boxCornerRadiusBottomEnd="10dp"
            android:layout_marginHorizontal="32dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"

            app:layout_constraintBottom_toTopOf="@id/tlPhone"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/tlFullName"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusTopStart="10dp"
            android:hint="@string/valid_email"
            android:textColorHint="@color/black_50">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/mail_icon"
                android:inputType="textEmailAddress"
                android:id="@+id/etValidEmail"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"

            android:hint="@string/phone_number"
            android:textColorHint="@color/black_50"
            app:boxBackgroundColor="@color/white_C4"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/primary_pink"
            app:boxStrokeWidth="0dp"

            app:layout_constraintBottom_toTopOf="@id/tlStrongPass"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlValidEmail"
            app:prefixText="+48">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/phone_icon"
                android:inputType="phone"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlStrongPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:hint="@string/strong_pass"
            android:textColorHint="@color/black_50"
            app:boxBackgroundColor="@color/white_C4"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/primary_pink"
            app:boxStrokeWidth="0dp"
            app:layout_constraintBottom_toTopOf="@+id/materialButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlPhone"
            app:prefixText="+48">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password_icon"
                android:inputType="phone"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            app:buttonTint="@color/primary_pink"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            android:text="@string/accept_terms"
            app:layout_constraintEnd_toEndOf="@+id/tlStrongPass"
            app:layout_constraintStart_toStartOf="@+id/tlStrongPass"
            app:layout_constraintTop_toBottomOf="@+id/tlStrongPass" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>